# tradvolprojet

./: README.md  backtest.py  pyproject.toml  requirements.txt  variance_swap.py
.idx/: dev.nix
data/: par-yield-curve-rates-2020-2023.csv
data/optiondb_2016_2023.parquet/date=2016-01-04%2000%3A00%3A00.000000000/: e7225307ed56408c90156aea9cb14e58-0.parquet
data/optiondb_2016_2023.parquet/date=2016-01-05%2000%3A00%3A00.000000000/: e7225307ed56408c90156aea9cb14e58-0.parquet
data/optiondb_2016_2023.parquet/date=2016-01-06%2000%3A00%3A00.000000000/: e7225307ed56408c90156aea9cb14e58-0.parquet
data/optiondb_2016_2023.parquet/date=2016-01-07%2000%3A00%3A00.000000000/: e7225307ed56408c90156aea9cb14e58-0.parquet
data/optiondb_2016_2023.parquet/date=2016-01-08%2000%3A00%3A00.000000000/: e7225307ed56408c90156aea9cb14e58-0.parquet
data/optiondb_2016_2023.parquet/date=2016-01-11%2000%3A00%3A00.000000000/: e7225307ed56408c90156aea9cb14e58-0.parquet
investment_lab/: backtest.py  constants.py  dataclass.py  option_selection.py  option_strategies.py  option_trade.py  rates.py  util.py
investment_lab/data/: data_loader.py  option_db.py  rates_db.py
investment_lab/metrics/: distance.py  performance.py  util.py  volatility.py
investment_lab/pricing/: black_scholes.py  implied_volatility.py
investment_lab/stochastic/: base.py  geometric_brownian_motion.py
investment_lab/surface/: base.py  sabr.py  ssvi.py  svi.py
notebooks/: Lecture_2.ipynb  Lecture_3.ipynb  Lecture_4.ipynb  Lecture_5.ipynb  Projet.ipynb  Projet_vf.ipynb
(+2616 files in other folders)
